--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -1,32 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<GridPane fx:id="board"  minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" scaleShape="false" stylesheets="@ui.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.BoardGameController">
-  <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-  </columnConstraints>
-  <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-   <opaqueInsets>
-      <Insets />
-   </opaqueInsets>
-
+<GridPane fx:id="board" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" scaleShape="false" stylesheets="@ui.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.BoardGameController">
+    <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+    </columnConstraints>
+    <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
+    </rowConstraints>
+    <opaqueInsets>
+        <Insets />
+    </opaqueInsets>
+    <!--
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="1" />
@@ -37,11 +41,11 @@
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="6" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="up" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="up" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="6" GridPane.rowIndex="1" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="2" GridPane.rowIndex="2" />
@@ -50,7 +54,7 @@
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="5" GridPane.rowIndex="2" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="6" GridPane.rowIndex="2" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="up" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="1" GridPane.rowIndex="3" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="rightAndDown" GridPane.columnIndex="3" GridPane.rowIndex="3" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="leftAndRight" GridPane.columnIndex="4" GridPane.rowIndex="3" />
@@ -59,19 +63,23 @@
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.rowIndex="4" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="up" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="3" GridPane.rowIndex="4" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="4" GridPane.rowIndex="4" />
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="up" GridPane.columnIndex="6" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="up" GridPane.rowIndex="5" />
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="6" GridPane.rowIndex="4" />
+      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.rowIndex="5" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="target" GridPane.columnIndex="2" GridPane.rowIndex="5">
+
          <children>
-            <Text layoutX="32.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cél">
+            <TextField alignment="CENTER" prefHeight="114.0" prefWidth="115.0" styleClass="target" text="CÉL">
                <font>
-                  <Font size="32.0" />
+                  <Font name="Serif Bold" size="27.0" />
                </font>
-            </Text>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+            </TextField>
          </children>
       </Pane>
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="3" GridPane.rowIndex="5" />
@@ -86,6 +94,6 @@
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="5" GridPane.rowIndex="6" />
       <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="6" GridPane.rowIndex="6" />
    </children>
-
+    -->
 
 </GridPane>
