--- a/src/main/resources/ui.fxml
+++ b/src/main/resources/ui.fxml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
 
 <GridPane fx:id="board" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" scaleShape="false" stylesheets="@ui.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.BoardGameController">
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="80.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
@@ -30,70 +27,5 @@
     <opaqueInsets>
         <Insets />
     </opaqueInsets>
-    <!--
-   <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="6" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="6" GridPane.rowIndex="2" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="rightAndDown" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="leftAndRight" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="6" GridPane.rowIndex="3" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="down" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="6" GridPane.rowIndex="4" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.rowIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="target" GridPane.columnIndex="2" GridPane.rowIndex="5">
-
-         <children>
-            <TextField alignment="CENTER" prefHeight="114.0" prefWidth="115.0" styleClass="target" text="CÉL">
-               <font>
-                  <Font name="Serif Bold" size="27.0" />
-               </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </TextField>
-         </children>
-      </Pane>
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
-      <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="top" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="4" GridPane.rowIndex="6" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="right" GridPane.columnIndex="5" GridPane.rowIndex="6" />
-      <Pane prefHeight="200.0" prefWidth="200.0" styleClass="left" GridPane.columnIndex="6" GridPane.rowIndex="6" />
-   </children>
-    -->
 
 </GridPane>
