--- a/src/main/resources/fxml/ui.fxml
+++ b/src/main/resources/fxml/ui.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane onKeyPressed="#handleOnKeyPressed" prefHeight="700.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.BoardGameController">
+<Pane onKeyPressed="#handleOnKeyPressed" prefHeight="700.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.controller.BoardGameController">
    <children>
       <Label fx:id="usernameLabel" layoutX="45.0" layoutY="7.0" prefHeight="16.0" prefWidth="565.0" text="Current user: ">
          <font>
@@ -40,7 +40,7 @@
           </opaqueInsets>
       
       </GridPane>
-      <Button fx:id="doneButton" layoutX="305.0" layoutY="649.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="83.0" text="Give up" /> <!--onAction="#finishGame"-->
+      <Button fx:id="doneButton" onAction="#finishGame" layoutX="305.0" layoutY="649.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="83.0" text="Give up" />
       <Label fx:id="solvedLabel" layoutX="426.0" layoutY="648.0" prefHeight="42.0" prefWidth="184.0" textFill="#002466">
          <font>
             <Font size="18.0" />
