--- a/src/main/resources/fxml/list.fxml
+++ b/src/main/resources/fxml/list.fxml
@@ -7,22 +7,21 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.controller.ListController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.controller.ListController">
    <children>
-      <TableView fx:id="toptenTable" editable="true" layoutX="25.0" layoutY="74.0" prefHeight="550.0" prefWidth="650.0">
+      <TableView fx:id="playerListTable" editable="true" layoutX="27.0" layoutY="80.0" prefHeight="540.0" prefWidth="597.0">
         <columns>
-          <TableColumn fx:id="player" prefWidth="200.0" text="Player" />
-          <TableColumn fx:id="steps" prefWidth="50.0" text="Steps" />
-            <TableColumn fx:id="duration" prefWidth="100.0" text="Duration" />
-            <TableColumn fx:id="created" prefWidth="295.0" text="Date" />
+            <TableColumn fx:id="userName" prefWidth="200.0" text="Player" />
+            <TableColumn fx:id="step" prefWidth="50.0" text="Steps" />
+            <TableColumn fx:id="solved" prefWidth="120.0" text="Win/lose" />
+            <TableColumn fx:id="date" prefWidth="225.0" text="Date" />
         </columns>
       </TableView>
-      <Label layoutX="272.0" layoutY="32.0" text="Top Ten games:">
+      <Label layoutX="267.0" layoutY="32.0" text="Player list:">
          <font>
             <Font size="22.0" />
          </font>
       </Label>
-      <Button layoutX="300.0" layoutY="635.0"  mnemonicParsing="false" prefHeight="51.0" prefWidth="122.0" text="Main menu" /> <!--onAction="#back"-->
+      <Button layoutX="265.0" layoutY="635.0" mnemonicParsing="false" onAction="#back" prefHeight="51.0" prefWidth="122.0" text="Main menu" />
    </children>
 </Pane>
