--- a/src/main/resources/fxml/ui.fxml
+++ b/src/main/resources/fxml/ui.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<Pane onKeyPressed="#handleOnKeyPressed" prefHeight="700.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.controller.BoardGameController">
+<Pane onKeyPressed="#handleOnKeyPressed" prefHeight="700.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="myGame.javafx.controller.BoardGameController">
    <children>
       <Label fx:id="usernameLabel" layoutX="45.0" layoutY="7.0" prefHeight="16.0" prefWidth="565.0" text="Current user: ">
          <font>
