--- a/src/main/resources/fxml/list.fxml
+++ b/src/main/resources/fxml/list.fxml
@@ -13,7 +13,7 @@
         <columns>
             <TableColumn fx:id="userName" prefWidth="200.0" text="Player" />
             <TableColumn fx:id="step" prefWidth="50.0" text="Steps" />
-            <TableColumn fx:id="solved" prefWidth="120.0" text="Win/lose" />
+            <TableColumn fx:id="solved" prefWidth="120.0" text="Result" />
             <TableColumn fx:id="date" prefWidth="225.0" text="Date" />
         </columns>
       </TableView>
